cleaned up and added notes to readme on testing each backend after creating the separate micro services.

--- a/backend-user-api/package.json
+++ b/backend-user-api/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "udagram-api",
-  "version": "2.0.0",
+  "name": "udagram-api-user",
+  "version": "1.0.0",
   "description": "",
   "main": "src/server.js",
   "scripts": {
