--- a/backend-feed-api/package.json
+++ b/backend-feed-api/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "udagram-api",
-  "version": "2.0.0",
+  "name": "udagram-api-feed",
+  "version": "1.0",
   "description": "",
   "main": "src/server.js",
   "scripts": {
