--- a/deployment/k8s/k8s-service-user.yaml
+++ b/deployment/k8s/k8s-service-user.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: my-app
   labels:
-    run: my-app
+    service: backend-user
+  name: backend-user
 spec:
   ports:
-  - port: 80
-    protocol: TCP
+  - name: "8080"
+    port: 8080
+    targetPort: 8080
   selector:
-    run: my-app
+    service: backend-user
