successfully ran docker-compose build and docker-compose push and provided error info for docker up.

--- a/deployment/docker/docker-compose-build.yaml
+++ b/deployment/docker/docker-compose-build.yaml
@@ -3,16 +3,16 @@ services:
   reverseproxy:
     build:
       context: .
-    image: reverseproxy
+    image: mercicle/microservice-project:reverseproxy
   backend_user:
     build:
       context: ../../backend-user-api
-    image: udagram-backend-user
+    image: mercicle/microservice-project:udagram-backend-user
   backend_feed:
     build:
       context: ../../backend-feed-api
-    image: udagram-backend-feed
+    image: mercicle/microservice-project:udagram-backend-feed
   frontend:
     build:
       context: ../../frontend
-    image: udagram-frontend
+    image: mercicle/microservice-project:udagram-frontend
