Corrected my image names in the respective k8s-deployment yaml's to use the full [account]/[repository]:tag

--- a/deployment/k8s/k8s-reverseproxy-deployment.yaml
+++ b/deployment/k8s/k8s-reverseproxy-deployment.yaml
@@ -12,7 +12,7 @@ spec:
         service: reverseproxy
     spec:
       containers:
-      - image: reverseproxy
+      - image: mercicle/microservice-project:reverseproxy
         name: reverseproxy
         imagePullPolicy: Always
         resources:
