--- a/deployment/k8s/k8s-deployment-feed.yaml
+++ b/deployment/k8s/k8s-deployment-feed.yaml
@@ -12,7 +12,7 @@ spec:
         service: backend-feed
     spec:
       containers:
-      - image: udagram-backend-feed
+      - image: mercicle/microservice-project:udagram-backend-feed
         name: backend-feed
         imagePullPolicy: Always
         resources:
