--- a/deployment/k8s/k8s-deployment-frontend.yaml
+++ b/deployment/k8s/k8s-deployment-frontend.yaml
@@ -13,7 +13,7 @@ spec:
         api: external
     spec:
       containers:
-      - image: udagram-frontend
+      - image: mercicle/microservice-project:udagram-frontend
         name: frontend
         imagePullPolicy: Always
         ports:
