--- a/deployment/k8s/k8s-deployment-user.yaml
+++ b/deployment/k8s/k8s-deployment-user.yaml
@@ -12,7 +12,7 @@ spec:
         service: backend-user
     spec:
       containers:
-      - image: udagram-backend-user
+      - image: mercicle/microservice-project:udagram-backend-user
         name: backend-user
         imagePullPolicy: Always
         resources:
