--- a/deployment/k8s/k8s-deployment-reverseproxy.yaml
+++ b/deployment/k8s/k8s-deployment-reverseproxy.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   labels:
@@ -6,6 +6,9 @@ metadata:
   name: reverseproxy
 spec:
   replicas: 2
+  selector:
+    matchLabels:
+      service: reverseproxy
   template:
     metadata:
       labels:
