--- a/deployment/k8s/k8s-deployment-user.yaml
+++ b/deployment/k8s/k8s-deployment-user.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
@@ -6,6 +6,9 @@ metadata:
   name: backend-user
 spec:
   replicas: 3
+  selector:
+    matchLabels:
+      service: backend-user
   template:
     metadata:
       labels:
